# YusToDo

./: .env_example  README.md  docker-compose.yaml  package-lock.json  package.json  pgadmin_config.json  pyproject.toml
backend/: .env_example  Dockerfile  index.js  nodemon.json  package-lock.json  package.json  sequelizerc.js  tsconfig.json
backend/config/config/: settings.py
backend/src/: db_connectior.js  db_connector.ts  index.js  index.ts
backend/src/config/: config.json
backend/src/controllers/: user.ts
backend/src/entity/: Purpose.ts  User.ts  task.ts  token.ts  user.ts
backend/src/middleware/: AuthMiddleware.ts
backend/src/migrations/: 1721738026189-InitUserAndPurpose.ts
backend/src/models/: index.js  purpose.js  user.js
backend/src/routers/: auth.ts  main.ts
backend/src/routers/Auth/: AuthRouter.ts
backend/src/utils/auth/: mail.ts  token.ts  user.ts
